--- a/src/Winhance.WPF/Localization/af.json
+++ b/src/Winhance.WPF/Localization/af.json
@@ -32,6 +32,11 @@
   "Button_Export": "Voer Uit",
   "Theme_Dark": "Winhance Donker",
   "Theme_Light": "Winhance Lig",
+  "Theme_System": "Stelsel",
+  "Theme_LightNative": "Lig",
+  "Theme_DarkNative": "Donker",
+  "Theme_LegacyWhite": "Legacy Lig",
+  "Theme_LegacyDark": "Legacy Donker",
   "Menu_CheckForUpdates": "Kyk vir Opdaterings",
   "Menu_WinhanceLogs": "Winhance Logboeke",
   "Menu_WinhanceScripts": "Winhance Skripte",
