--- a/src/Winhance.WPF/Localization/cs.json
+++ b/src/Winhance.WPF/Localization/cs.json
@@ -32,6 +32,11 @@
   "Button_Export": "Exportovat",
   "Theme_Dark": "Winhance Tmavý",
   "Theme_Light": "Winhance Světlý",
+  "Theme_System": "Systém",
+  "Theme_LightNative": "Světlý",
+  "Theme_DarkNative": "Tmavý",
+  "Theme_LegacyWhite": "Legacy Světlý",
+  "Theme_LegacyDark": "Legacy Tmavý",
   "Menu_CheckForUpdates": "Zkontrolovat aktualizace",
   "Menu_WinhanceLogs": "Protokoly Winhance",
   "Menu_WinhanceScripts": "Skripty Winhance",
