--- a/src/Winhance.WPF/Localization/de.json
+++ b/src/Winhance.WPF/Localization/de.json
@@ -32,6 +32,11 @@
   "Button_Export": "Exportieren",
   "Theme_Dark": "Winhance Dunkel",
   "Theme_Light": "Winhance Hell",
+  "Theme_System": "System",
+  "Theme_LightNative": "Hell",
+  "Theme_DarkNative": "Dunkel",
+  "Theme_LegacyWhite": "Legacy Hell",
+  "Theme_LegacyDark": "Legacy Dunkel",
   "Menu_CheckForUpdates": "Auf Updates prüfen",
   "Menu_WinhanceLogs": "Winhance-Protokolle",
   "Menu_WinhanceScripts": "Winhance-Skripte",
