--- a/src/Winhance.WPF/Localization/el.json
+++ b/src/Winhance.WPF/Localization/el.json
@@ -32,6 +32,11 @@
   "Button_Export": "Εξαγωγή",
   "Theme_Dark": "Winhance Σκοτεινό",
   "Theme_Light": "Winhance Φωτεινό",
+  "Theme_System": "Σύστημα",
+  "Theme_LightNative": "Φωτεινό",
+  "Theme_DarkNative": "Σκοτεινό",
+  "Theme_LegacyWhite": "Legacy Φωτεινό",
+  "Theme_LegacyDark": "Legacy Σκοτεινό",
   "Menu_CheckForUpdates": "Έλεγχος για Ενημερώσεις",
   "Menu_WinhanceLogs": "Αρχεία Καταγραφής Winhance",
   "Menu_WinhanceScripts": "Σενάρια Winhance",
