--- a/src/Winhance.WPF/Localization/en.json
+++ b/src/Winhance.WPF/Localization/en.json
@@ -32,6 +32,11 @@
   "Button_Export": "Export",
   "Theme_Dark": "Winhance Dark",
   "Theme_Light": "Winhance Light",
+  "Theme_System": "System",
+  "Theme_LightNative": "Light",
+  "Theme_DarkNative": "Dark",
+  "Theme_LegacyWhite": "Legacy Light",
+  "Theme_LegacyDark": "Legacy Dark",
   "Menu_CheckForUpdates": "Check for Updates",
   "Menu_WinhanceLogs": "Winhance Logs",
   "Menu_WinhanceScripts": "Winhance Scripts",
