--- a/src/Winhance.WPF/Localization/es.json
+++ b/src/Winhance.WPF/Localization/es.json
@@ -32,6 +32,11 @@
   "Button_Export": "Exportar",
   "Theme_Dark": "Winhance Oscuro",
   "Theme_Light": "Winhance Claro",
+  "Theme_System": "Sistema",
+  "Theme_LightNative": "Claro",
+  "Theme_DarkNative": "Oscuro",
+  "Theme_LegacyWhite": "Legacy Claro",
+  "Theme_LegacyDark": "Legacy Oscuro",
   "Menu_CheckForUpdates": "Buscar Actualizaciones",
   "Menu_WinhanceLogs": "Registros de Winhance",
   "Menu_WinhanceScripts": "Scripts de Winhance",
