--- a/src/Winhance.WPF/Localization/fr.json
+++ b/src/Winhance.WPF/Localization/fr.json
@@ -32,6 +32,11 @@
   "Button_Export": "Exporter",
   "Theme_Dark": "Winhance Sombre",
   "Theme_Light": "Winhance Clair",
+  "Theme_System": "Système",
+  "Theme_LightNative": "Clair",
+  "Theme_DarkNative": "Sombre",
+  "Theme_LegacyWhite": "Legacy Clair",
+  "Theme_LegacyDark": "Legacy Sombre",
   "Menu_CheckForUpdates": "Vérifier les mises à jour",
   "Menu_WinhanceLogs": "Logs de Winhance",
   "Menu_WinhanceScripts": "Scripts de Winhance",
