--- a/src/Winhance.WPF/Localization/hi.json
+++ b/src/Winhance.WPF/Localization/hi.json
@@ -32,6 +32,11 @@
   "Button_Export": "निर्यात",
   "Theme_Dark": "विनहान्स डार्क",
   "Theme_Light": "विनहान्स लाइट",
+  "Theme_System": "सिस्टम",
+  "Theme_LightNative": "लाइट",
+  "Theme_DarkNative": "डार्क",
+  "Theme_LegacyWhite": "Legacy लाइट",
+  "Theme_LegacyDark": "Legacy डार्क",
   "Menu_CheckForUpdates": "अपडेट के लिए जांचें",
   "Menu_WinhanceLogs": "विनहान्स लॉग्स",
   "Menu_WinhanceScripts": "विनहान्स स्क्रिप्ट्स",
