--- a/src/Winhance.WPF/Localization/hu.json
+++ b/src/Winhance.WPF/Localization/hu.json
@@ -32,6 +32,11 @@
   "Button_Export": "Exportálás",
   "Theme_Dark": "Winhance sötét",
   "Theme_Light": "Winhance világos",
+  "Theme_System": "Rendszer",
+  "Theme_LightNative": "Világos",
+  "Theme_DarkNative": "Sötét",
+  "Theme_LegacyWhite": "Legacy Világos",
+  "Theme_LegacyDark": "Legacy Sötét",
   "Menu_CheckForUpdates": "Frissítések keresése",
   "Menu_WinhanceLogs": "Winhance naplók",
   "Menu_WinhanceScripts": "Winhance szkriptek",
