--- a/src/Winhance.WPF/Localization/it.json
+++ b/src/Winhance.WPF/Localization/it.json
@@ -32,6 +32,11 @@
   "Button_Export": "Esporta",
   "Theme_Dark": "Winhance Scuro",
   "Theme_Light": "Winhance Chiaro",
+  "Theme_System": "Sistema",
+  "Theme_LightNative": "Chiaro",
+  "Theme_DarkNative": "Scuro",
+  "Theme_LegacyWhite": "Legacy Chiaro",
+  "Theme_LegacyDark": "Legacy Scuro",
   "Menu_CheckForUpdates": "Controlla aggiornamenti",
   "Menu_WinhanceLogs": "Log di Winhance",
   "Menu_WinhanceScripts": "Script di Winhance",
