--- a/src/Winhance.WPF/Localization/ja.json
+++ b/src/Winhance.WPF/Localization/ja.json
@@ -32,6 +32,11 @@
   "Button_Export": "エクスポート",
   "Theme_Dark": "Winhanceダーク",
   "Theme_Light": "Winhanceライト",
+  "Theme_System": "システム",
+  "Theme_LightNative": "ライト",
+  "Theme_DarkNative": "ダーク",
+  "Theme_LegacyWhite": "Legacy ライト",
+  "Theme_LegacyDark": "Legacy ダーク",
   "Menu_CheckForUpdates": "アップデートを確認",
   "Menu_WinhanceLogs": "Winhanceログ",
   "Menu_WinhanceScripts": "Winhanceスクリプト",
