--- a/src/Winhance.WPF/Localization/lt.json
+++ b/src/Winhance.WPF/Localization/lt.json
@@ -32,6 +32,11 @@
   "Button_Export": "Eksportuoti",
   "Theme_Dark": "Winhance tamsi",
   "Theme_Light": "Winhance šviesi",
+  "Theme_System": "Sistema",
+  "Theme_LightNative": "Šviesi",
+  "Theme_DarkNative": "Tamsi",
+  "Theme_LegacyWhite": "Legacy Šviesi",
+  "Theme_LegacyDark": "Legacy Tamsi",
   "Menu_CheckForUpdates": "Tikrinti atnaujinimus",
   "Menu_WinhanceLogs": "Winhance žurnalai",
   "Menu_WinhanceScripts": "Winhance scenarijai",
