--- a/src/Winhance.WPF/Localization/lv.json
+++ b/src/Winhance.WPF/Localization/lv.json
@@ -32,6 +32,11 @@
   "Button_Export": "Eksportēt",
   "Theme_Dark": "Winhance tumšais",
   "Theme_Light": "Winhance gaišais",
+  "Theme_System": "Sistēma",
+  "Theme_LightNative": "Gaišais",
+  "Theme_DarkNative": "Tumšais",
+  "Theme_LegacyWhite": "Legacy Gaišais",
+  "Theme_LegacyDark": "Legacy Tumšais",
   "Menu_CheckForUpdates": "Pārbaudīt atjauninājumus",
   "Menu_WinhanceLogs": "Winhance žurnāli",
   "Menu_WinhanceScripts": "Winhance skripti",
