--- a/src/Winhance.WPF/Localization/pl.json
+++ b/src/Winhance.WPF/Localization/pl.json
@@ -32,6 +32,11 @@
   "Button_Export": "Eksportuj",
   "Theme_Dark": "Ciemny Winhance",
   "Theme_Light": "Jasny Winhance",
+  "Theme_System": "System",
+  "Theme_LightNative": "Jasny",
+  "Theme_DarkNative": "Ciemny",
+  "Theme_LegacyWhite": "Legacy Jasny",
+  "Theme_LegacyDark": "Legacy Ciemny",
   "Menu_CheckForUpdates": "Sprawdź aktualizacje",
   "Menu_WinhanceLogs": "Logi Winhance",
   "Menu_WinhanceScripts": "Skrypty Winhance",
