--- a/src/Winhance.WPF/Localization/pt-BR.json
+++ b/src/Winhance.WPF/Localization/pt-BR.json
@@ -32,6 +32,11 @@
   "Button_Export": "Exportar",
   "Theme_Dark": "Winhance Escuro",
   "Theme_Light": "Winhance Claro",
+  "Theme_System": "Sistema",
+  "Theme_LightNative": "Claro",
+  "Theme_DarkNative": "Escuro",
+  "Theme_LegacyWhite": "Legacy Claro",
+  "Theme_LegacyDark": "Legacy Escuro",
   "Menu_CheckForUpdates": "Verificar Atualizações",
   "Menu_WinhanceLogs": "Logs do Winhance",
   "Menu_WinhanceScripts": "Scripts do Winhance",
