--- a/src/Winhance.WPF/Localization/ru.json
+++ b/src/Winhance.WPF/Localization/ru.json
@@ -32,6 +32,11 @@
   "Button_Export": "Экспорт",
   "Theme_Dark": "Winhance Тёмная",
   "Theme_Light": "Winhance Светлая",
+  "Theme_System": "Системная",
+  "Theme_LightNative": "Светлая",
+  "Theme_DarkNative": "Тёмная",
+  "Theme_LegacyWhite": "Legacy Светлая",
+  "Theme_LegacyDark": "Legacy Тёмная",
   "Menu_CheckForUpdates": "Проверить обновления",
   "Menu_WinhanceLogs": "Логи Winhance",
   "Menu_WinhanceScripts": "Скрипты Winhance",
