--- a/src/Winhance.WPF/Localization/sv.json
+++ b/src/Winhance.WPF/Localization/sv.json
@@ -32,6 +32,11 @@
   "Button_Export": "Exportera",
   "Theme_Dark": "Winhance Mörk",
   "Theme_Light": "Winhance Ljus",
+  "Theme_System": "System",
+  "Theme_LightNative": "Ljus",
+  "Theme_DarkNative": "Mörk",
+  "Theme_LegacyWhite": "Legacy Ljus",
+  "Theme_LegacyDark": "Legacy Mörk",
   "Menu_CheckForUpdates": "Sök efter uppdateringar",
   "Menu_WinhanceLogs": "Winhance-loggar",
   "Menu_WinhanceScripts": "Winhance-skript",
