--- a/src/Winhance.WPF/Localization/uk.json
+++ b/src/Winhance.WPF/Localization/uk.json
@@ -32,6 +32,11 @@
   "Button_Export": "Експорт",
   "Theme_Dark": "Winhance темна",
   "Theme_Light": "Winhance світла",
+  "Theme_System": "Системна",
+  "Theme_LightNative": "Світла",
+  "Theme_DarkNative": "Темна",
+  "Theme_LegacyWhite": "Legacy Світла",
+  "Theme_LegacyDark": "Legacy Темна",
   "Menu_CheckForUpdates": "Перевірити наявність оновлень",
   "Menu_WinhanceLogs": "Журнали Winhance",
   "Menu_WinhanceScripts": "Скрипти Winhance",
