--- a/src/Winhance.WPF/Localization/vi.json
+++ b/src/Winhance.WPF/Localization/vi.json
@@ -32,6 +32,11 @@
   "Button_Export": "Xuất",
   "Theme_Dark": "Winhance Tối",
   "Theme_Light": "Winhance Sáng",
+  "Theme_System": "Hệ thống",
+  "Theme_LightNative": "Sáng",
+  "Theme_DarkNative": "Tối",
+  "Theme_LegacyWhite": "Legacy Sáng",
+  "Theme_LegacyDark": "Legacy Tối",
   "Menu_CheckForUpdates": "Kiểm tra cập nhật",
   "Menu_WinhanceLogs": "Nhật ký Winhance",
   "Menu_WinhanceScripts": "Tập lệnh Winhance",
