--- a/src/Winhance.WPF/Localization/zh-Hans.json
+++ b/src/Winhance.WPF/Localization/zh-Hans.json
@@ -32,6 +32,11 @@
   "Button_Export": "导出",
   "Theme_Dark": "Winhance 深色",
   "Theme_Light": "Winhance 浅色",
+  "Theme_System": "系统",
+  "Theme_LightNative": "浅色",
+  "Theme_DarkNative": "深色",
+  "Theme_LegacyWhite": "Legacy 浅色",
+  "Theme_LegacyDark": "Legacy 深色",
   "Menu_CheckForUpdates": "检查更新",
   "Menu_WinhanceLogs": "Winhance 日志",
   "Menu_WinhanceScripts": "Winhance 脚本",
