--- a/src/Winhance.WPF/Localization/nl.json
+++ b/src/Winhance.WPF/Localization/nl.json
@@ -32,6 +32,11 @@
   "Button_Export": "Exporteren",
   "Theme_Dark": "Winhance Donker",
   "Theme_Light": "Winhance Licht",
+  "Theme_System": "Systeem",
+  "Theme_LightNative": "Licht",
+  "Theme_DarkNative": "Donker",
+  "Theme_LegacyWhite": "Legacy Licht",
+  "Theme_LegacyDark": "Legacy Donker",
   "Menu_CheckForUpdates": "Controleren op updates",
   "Menu_WinhanceLogs": "Winhance Logboeken",
   "Menu_WinhanceScripts": "Winhance Scripts",
