--- a/src/Winhance.WPF/Localization/zh-Hant.json
+++ b/src/Winhance.WPF/Localization/zh-Hant.json
@@ -32,6 +32,11 @@
   "Button_Export": "匯出",
   "Theme_Dark": "Winhance 深色模式",
   "Theme_Light": "Winhance 淺色模式",
+  "Theme_System": "系統",
+  "Theme_LightNative": "淺色",
+  "Theme_DarkNative": "深色",
+  "Theme_LegacyWhite": "Legacy 淺色",
+  "Theme_LegacyDark": "Legacy 深色",
   "Menu_CheckForUpdates": "檢查更新",
   "Menu_WinhanceLogs": "Winhance 記錄檔",
   "Menu_WinhanceScripts": "Winhance 指令碼",
