MoreMenu Flyout Done

--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Install Now",
   "Dialog_Update_Status_Downloading": "Downloading update...",
   "Dialog_Update_Status_Error": "Error downloading update: {0}",
+  "Dialog_Update_NoUpdates_Title": "No Updates Available",
+  "Dialog_Update_NoUpdates_Message": "You have the latest version of Winhance.",
+  "Dialog_Update_CheckError_Title": "Update Check Error",
+  "Dialog_Update_CheckError_Message": "An error occurred while checking for updates: {0}",
   "Dialog_ImportConfig_Title": "Import Config",
   "Dialog_ImportConfig_Option_Own_Title": "Import my own config",
   "Dialog_ImportConfig_Option_Own_Description": "Select a configuration file from your computer",
