--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Instalar Ahora",
   "Dialog_Update_Status_Downloading": "Descargando actualización...",
   "Dialog_Update_Status_Error": "Error al descargar actualización: {0}",
+  "Dialog_Update_NoUpdates_Title": "No hay actualizaciones disponibles",
+  "Dialog_Update_NoUpdates_Message": "Tienes la última versión de Winhance.",
+  "Dialog_Update_CheckError_Title": "Error al buscar actualizaciones",
+  "Dialog_Update_CheckError_Message": "Se produjo un error al buscar actualizaciones: {0}",
   "Dialog_ImportConfig_Title": "Importar Configuración",
   "Dialog_ImportConfig_Option_Own_Title": "Importar mi propia configuración",
   "Dialog_ImportConfig_Option_Own_Description": "Selecciona un archivo de configuración de tu equipo",
