--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "अभी इंस्टॉल करें",
   "Dialog_Update_Status_Downloading": "अपडेट डाउनलोड हो रहा है...",
   "Dialog_Update_Status_Error": "अपडेट डाउनलोड करने में त्रुटि: {0}",
+  "Dialog_Update_NoUpdates_Title": "कोई अपडेट उपलब्ध नहीं",
+  "Dialog_Update_NoUpdates_Message": "आपके पास Winhance का नवीनतम संस्करण है।",
+  "Dialog_Update_CheckError_Title": "अपडेट जाँच त्रुटि",
+  "Dialog_Update_CheckError_Message": "अपडेट की जाँच करते समय एक त्रुटि हुई: {0}",
   "Dialog_ImportConfig_Title": "कॉन्फिग आयात करें",
   "Dialog_ImportConfig_Option_Own_Title": "मेरा अपना कॉन्फिग आयात करें",
   "Dialog_ImportConfig_Option_Own_Description": "अपने कंप्यूटर से एक कॉन्फ़िगरेशन फ़ाइल चुनें",
