--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Telepítés most",
   "Dialog_Update_Status_Downloading": "Frissítés letöltése...",
   "Dialog_Update_Status_Error": "Hiba a frissítés letöltése során: {0}",
+  "Dialog_Update_NoUpdates_Title": "Nincs elérhető frissítés",
+  "Dialog_Update_NoUpdates_Message": "A Winhance legújabb verziójával rendelkezik.",
+  "Dialog_Update_CheckError_Title": "Frissítés-ellenőrzési hiba",
+  "Dialog_Update_CheckError_Message": "Hiba történt a frissítések ellenőrzése során: {0}",
   "Dialog_ImportConfig_Title": "Konfiguráció importálása",
   "Dialog_ImportConfig_Option_Own_Title": "Saját beállításaim importálása",
   "Dialog_ImportConfig_Option_Own_Description": "Válasszon ki egy konfigurációs fájlt a számítógépéről",
