--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Installa ora",
   "Dialog_Update_Status_Downloading": "Download dell'aggiornamento in corso...",
   "Dialog_Update_Status_Error": "Errore durante il download dell'aggiornamento: {0}",
+  "Dialog_Update_NoUpdates_Title": "Nessun aggiornamento disponibile",
+  "Dialog_Update_NoUpdates_Message": "Hai l'ultima versione di Winhance.",
+  "Dialog_Update_CheckError_Title": "Errore controllo aggiornamenti",
+  "Dialog_Update_CheckError_Message": "Si è verificato un errore durante il controllo degli aggiornamenti: {0}",
   "Dialog_ImportConfig_Title": "Importa configurazione",
   "Dialog_ImportConfig_Option_Own_Title": "Importa la mia configurazione",
   "Dialog_ImportConfig_Option_Own_Description": "Seleziona un file di configurazione dal tuo computer",
