--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "今すぐインストール",
   "Dialog_Update_Status_Downloading": "アップデートをダウンロード中...",
   "Dialog_Update_Status_Error": "アップデートのダウンロードエラー：{0}",
+  "Dialog_Update_NoUpdates_Title": "利用可能なアップデートはありません",
+  "Dialog_Update_NoUpdates_Message": "Winhanceの最新バージョンをお使いです。",
+  "Dialog_Update_CheckError_Title": "アップデート確認エラー",
+  "Dialog_Update_CheckError_Message": "アップデートの確認中にエラーが発生しました：{0}",
   "Dialog_ImportConfig_Title": "構成をインポート",
   "Dialog_ImportConfig_Option_Own_Title": "自分の構成をインポート",
   "Dialog_ImportConfig_Option_Own_Description": "コンピュータから構成ファイルを選択",
