--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Įdiegti dabar",
   "Dialog_Update_Status_Downloading": "Atsisiunčiamas atnaujinimas...",
   "Dialog_Update_Status_Error": "Klaida atsisiunčiant atnaujinimą: {0}",
+  "Dialog_Update_NoUpdates_Title": "Nėra naujinimų",
+  "Dialog_Update_NoUpdates_Message": "Turite naujausią Winhance versiją.",
+  "Dialog_Update_CheckError_Title": "Naujinimų tikrinimo klaida",
+  "Dialog_Update_CheckError_Message": "Tikrinant naujinimus įvyko klaida: {0}",
   "Dialog_ImportConfig_Title": "Importuoti konfigūraciją",
   "Dialog_ImportConfig_Option_Own_Title": "Importuoti savo konfigūraciją",
   "Dialog_ImportConfig_Option_Own_Description": "Pasirinkite konfigūracijos failą iš savo kompiuterio",
