--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Instalēt tagad",
   "Dialog_Update_Status_Downloading": "Lejupielādē atjauninājumu...",
   "Dialog_Update_Status_Error": "Kļūda, lejupielādējot atjauninājumu: {0}",
+  "Dialog_Update_NoUpdates_Title": "Nav pieejamu atjauninājumu",
+  "Dialog_Update_NoUpdates_Message": "Jums ir jaunākā Winhance versija.",
+  "Dialog_Update_CheckError_Title": "Atjauninājumu pārbaudes kļūda",
+  "Dialog_Update_CheckError_Message": "Pārbaudot atjauninājumus, radās kļūda: {0}",
   "Dialog_ImportConfig_Title": "Importēt konfigurāciju",
   "Dialog_ImportConfig_Option_Own_Title": "Importēt manu konfigurāciju",
   "Dialog_ImportConfig_Option_Own_Description": "Izvēlieties konfigurācijas failu no sava datora",
