--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Zainstaluj teraz",
   "Dialog_Update_Status_Downloading": "Pobieranie aktualizacji...",
   "Dialog_Update_Status_Error": "Błąd pobierania aktualizacji: {0}",
+  "Dialog_Update_NoUpdates_Title": "Brak dostępnych aktualizacji",
+  "Dialog_Update_NoUpdates_Message": "Masz najnowszą wersję Winhance.",
+  "Dialog_Update_CheckError_Title": "Błąd sprawdzania aktualizacji",
+  "Dialog_Update_CheckError_Message": "Wystąpił błąd podczas sprawdzania aktualizacji: {0}",
   "Dialog_ImportConfig_Title": "Importuj konfigurację",
   "Dialog_ImportConfig_Option_Own_Title": "Importuj własną konfigurację",
   "Dialog_ImportConfig_Option_Own_Description": "Wybierz plik konfiguracji z komputera",
