--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Встановити зараз",
   "Dialog_Update_Status_Downloading": "Завантаження оновлення...",
   "Dialog_Update_Status_Error": "Помилка завантаження оновлення: {0}",
+  "Dialog_Update_NoUpdates_Title": "Оновлення недоступні",
+  "Dialog_Update_NoUpdates_Message": "У вас встановлено найновішу версію Winhance.",
+  "Dialog_Update_CheckError_Title": "Помилка перевірки оновлень",
+  "Dialog_Update_CheckError_Message": "Під час перевірки оновлень сталася помилка: {0}",
   "Dialog_ImportConfig_Title": "Імпортувати конфігурацію",
   "Dialog_ImportConfig_Option_Own_Title": "Імпортувати власну конфігурацію",
   "Dialog_ImportConfig_Option_Own_Description": "Виберіть файл конфігурації з вашого комп'ютера",
