--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Cài đặt ngay",
   "Dialog_Update_Status_Downloading": "Đang tải xuống bản cập nhật...",
   "Dialog_Update_Status_Error": "Lỗi khi tải xuống bản cập nhật: {0}",
+  "Dialog_Update_NoUpdates_Title": "Không có bản cập nhật",
+  "Dialog_Update_NoUpdates_Message": "Bạn đang sử dụng phiên bản mới nhất của Winhance.",
+  "Dialog_Update_CheckError_Title": "Lỗi kiểm tra cập nhật",
+  "Dialog_Update_CheckError_Message": "Đã xảy ra lỗi khi kiểm tra cập nhật: {0}",
   "Dialog_ImportConfig_Title": "Nhập cấu hình",
   "Dialog_ImportConfig_Option_Own_Title": "Nhập cấu hình của riêng tôi",
   "Dialog_ImportConfig_Option_Own_Description": "Chọn một tệp cấu hình từ máy tính của bạn",
