--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "立即安裝",
   "Dialog_Update_Status_Downloading": "正在下載更新...",
   "Dialog_Update_Status_Error": "下載更新時發生錯誤：{0}",
+  "Dialog_Update_NoUpdates_Title": "沒有可用的更新",
+  "Dialog_Update_NoUpdates_Message": "您已擁有最新版本的 Winhance。",
+  "Dialog_Update_CheckError_Title": "檢查更新時發生錯誤",
+  "Dialog_Update_CheckError_Message": "檢查更新時發生錯誤：{0}",
   "Dialog_ImportConfig_Title": "匯入設定",
   "Dialog_ImportConfig_Option_Own_Title": "匯入我自己的設定檔",
   "Dialog_ImportConfig_Option_Own_Description": "從您的電腦選擇設定檔",
