--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Installeer Nou",
   "Dialog_Update_Status_Downloading": "Laai opdatering af...",
   "Dialog_Update_Status_Error": "Fout met aflaai van opdatering: {0}",
+  "Dialog_Update_NoUpdates_Title": "Geen Opdaterings Beskikbaar",
+  "Dialog_Update_NoUpdates_Message": "Jy het die nuutste weergawe van Winhance.",
+  "Dialog_Update_CheckError_Title": "Opdateringkontrolefout",
+  "Dialog_Update_CheckError_Message": "Daar het 'n fout voorgekom terwyl daar vir opdaterings gekontroleer is: {0}",
   "Dialog_ImportConfig_Title": "Voer Konfigurasie In",
   "Dialog_ImportConfig_Option_Own_Title": "Voer my eie konfigurasie in",
   "Dialog_ImportConfig_Option_Own_Description": "Kies 'n konfigurasielêer vanaf jou rekenaar",
