--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Nainstalovat nyní",
   "Dialog_Update_Status_Downloading": "Stahování aktualizace...",
   "Dialog_Update_Status_Error": "Chyba při stahování aktualizace: {0}",
+  "Dialog_Update_NoUpdates_Title": "Žádné aktualizace nejsou k dispozici",
+  "Dialog_Update_NoUpdates_Message": "Máte nejnovější verzi Winhance.",
+  "Dialog_Update_CheckError_Title": "Chyba kontroly aktualizací",
+  "Dialog_Update_CheckError_Message": "Při kontrole aktualizací došlo k chybě: {0}",
   "Dialog_ImportConfig_Title": "Importovat konfiguraci",
   "Dialog_ImportConfig_Option_Own_Title": "Importovat vlastní konfiguraci",
   "Dialog_ImportConfig_Option_Own_Description": "Vyberte konfigurační soubor z vašeho počítače",
