--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Jetzt installieren",
   "Dialog_Update_Status_Downloading": "Update wird heruntergeladen...",
   "Dialog_Update_Status_Error": "Fehler beim Herunterladen des Updates: {0}",
+  "Dialog_Update_NoUpdates_Title": "Keine Updates verfügbar",
+  "Dialog_Update_NoUpdates_Message": "Sie haben die neueste Version von Winhance.",
+  "Dialog_Update_CheckError_Title": "Fehler bei der Update-Prüfung",
+  "Dialog_Update_CheckError_Message": "Beim Prüfen auf Updates ist ein Fehler aufgetreten: {0}",
   "Dialog_ImportConfig_Title": "Konfiguration importieren",
   "Dialog_ImportConfig_Option_Own_Title": "Eigene Konfiguration importieren",
   "Dialog_ImportConfig_Option_Own_Description": "Wählen Sie eine Konfigurationsdatei von Ihrem Computer aus",
