--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Εγκατάσταση Τώρα",
   "Dialog_Update_Status_Downloading": "Λήψη ενημέρωσης...",
   "Dialog_Update_Status_Error": "Σφάλμα λήψης ενημέρωσης: {0}",
+  "Dialog_Update_NoUpdates_Title": "Δεν υπάρχουν διαθέσιμες ενημερώσεις",
+  "Dialog_Update_NoUpdates_Message": "Έχετε την τελευταία έκδοση του Winhance.",
+  "Dialog_Update_CheckError_Title": "Σφάλμα ελέγχου ενημερώσεων",
+  "Dialog_Update_CheckError_Message": "Παρουσιάστηκε σφάλμα κατά τον έλεγχο για ενημερώσεις: {0}",
   "Dialog_ImportConfig_Title": "Εισαγωγή Ρυθμίσεων",
   "Dialog_ImportConfig_Option_Own_Title": "Εισαγωγή δικών μου ρυθμίσεων",
   "Dialog_ImportConfig_Option_Own_Description": "Επιλέξτε ένα αρχείο ρυθμίσεων από τον υπολογιστή σας",
