--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Installer maintenant",
   "Dialog_Update_Status_Downloading": "Téléchargement de la mise à jour...",
   "Dialog_Update_Status_Error": "Erreur lors du téléchargement de la mise à jour : {0}",
+  "Dialog_Update_NoUpdates_Title": "Aucune mise à jour disponible",
+  "Dialog_Update_NoUpdates_Message": "Vous avez la dernière version de Winhance.",
+  "Dialog_Update_CheckError_Title": "Erreur de vérification des mises à jour",
+  "Dialog_Update_CheckError_Message": "Une erreur s'est produite lors de la vérification des mises à jour : {0}",
   "Dialog_ImportConfig_Title": "Importer la configuration",
   "Dialog_ImportConfig_Option_Own_Title": "Importer ma propre configuration",
   "Dialog_ImportConfig_Option_Own_Description": "Sélectionner un fichier de configuration depuis votre ordinateur",
