--- a/src/Winhance.UI/Features/Common/Localization/nl-BE.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl-BE.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Nu Installeren",
   "Dialog_Update_Status_Downloading": "Update downloaden...",
   "Dialog_Update_Status_Error": "Fout bij downloaden update: {0}",
+  "Dialog_Update_NoUpdates_Title": "Geen updates beschikbaar",
+  "Dialog_Update_NoUpdates_Message": "U hebt de nieuwste versie van Winhance.",
+  "Dialog_Update_CheckError_Title": "Fout bij controleren op updates",
+  "Dialog_Update_CheckError_Message": "Er is een fout opgetreden bij het controleren op updates: {0}",
   "Dialog_ImportConfig_Title": "Config Importeren",
   "Dialog_ImportConfig_Option_Own_Title": "Mijn eigen config importeren",
   "Dialog_ImportConfig_Option_Own_Description": "Selecteer een configuratiebestand van uw computer",
