--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Instalar Agora",
   "Dialog_Update_Status_Downloading": "A descarregar atualização...",
   "Dialog_Update_Status_Error": "Erro ao descarregar atualização: {0}",
+  "Dialog_Update_NoUpdates_Title": "Nenhuma atualização disponível",
+  "Dialog_Update_NoUpdates_Message": "Tem a versão mais recente do Winhance.",
+  "Dialog_Update_CheckError_Title": "Erro ao verificar atualizações",
+  "Dialog_Update_CheckError_Message": "Ocorreu um erro ao verificar atualizações: {0}",
   "Dialog_ImportConfig_Title": "Importar Configuração",
   "Dialog_ImportConfig_Option_Own_Title": "Importar a minha própria configuração",
   "Dialog_ImportConfig_Option_Own_Description": "Selecione um ficheiro de configuração do seu computador",
