--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Установить сейчас",
   "Dialog_Update_Status_Downloading": "Загрузка обновления...",
   "Dialog_Update_Status_Error": "Ошибка загрузки обновления: {0}",
+  "Dialog_Update_NoUpdates_Title": "Обновления недоступны",
+  "Dialog_Update_NoUpdates_Message": "У вас установлена последняя версия Winhance.",
+  "Dialog_Update_CheckError_Title": "Ошибка проверки обновлений",
+  "Dialog_Update_CheckError_Message": "Произошла ошибка при проверке обновлений: {0}",
   "Dialog_ImportConfig_Title": "Импорт конфигурации",
   "Dialog_ImportConfig_Option_Own_Title": "Импортировать мою собственную конфигурацию",
   "Dialog_ImportConfig_Option_Own_Description": "Выберите файл конфигурации с вашего компьютера",
