--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "Installera nu",
   "Dialog_Update_Status_Downloading": "Laddar ner uppdatering...",
   "Dialog_Update_Status_Error": "Fel vid nedladdning av uppdatering: {0}",
+  "Dialog_Update_NoUpdates_Title": "Inga uppdateringar tillgängliga",
+  "Dialog_Update_NoUpdates_Message": "Du har den senaste versionen av Winhance.",
+  "Dialog_Update_CheckError_Title": "Fel vid uppdateringskontroll",
+  "Dialog_Update_CheckError_Message": "Ett fel uppstod vid kontroll av uppdateringar: {0}",
   "Dialog_ImportConfig_Title": "Importera konfiguration",
   "Dialog_ImportConfig_Option_Own_Title": "Importera min egen konfiguration",
   "Dialog_ImportConfig_Option_Own_Description": "Välj en konfigurationsfil från din dator",
