--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -67,6 +67,10 @@
   "Dialog_Update_Button_InstallNow": "立即安装",
   "Dialog_Update_Status_Downloading": "正在下载更新...",
   "Dialog_Update_Status_Error": "下载更新时出错：{0}",
+  "Dialog_Update_NoUpdates_Title": "没有可用的更新",
+  "Dialog_Update_NoUpdates_Message": "您已拥有最新版本的 Winhance。",
+  "Dialog_Update_CheckError_Title": "检查更新时出错",
+  "Dialog_Update_CheckError_Message": "检查更新时发生错误：{0}",
   "Dialog_ImportConfig_Title": "导入配置",
   "Dialog_ImportConfig_Option_Own_Title": "导入我自己的配置",
   "Dialog_ImportConfig_Option_Own_Description": "从您的计算机中选择一个配置文件",
