Finalize CustomizePage Overview Descriptions & Sub Feature GroupNames

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -178,6 +178,7 @@
   "SettingGroup_Files_and_Folders": "Lêers en Gidse",
   "SettingGroup_File_Associations": "Lêerassosiasies",
   "SettingGroup_Navigation_Pane": "Navigasiepaneel",
+  "SettingGroup_Other": "Ander",
   "Setting_windows-pushnotifications_Name": "Wys Kennisgewings",
   "Setting_windows-pushnotifications_Description": "Kry kennisgewings van toepassings en ander senders in Windows",
   "Setting_notifications-sound_Name": "Laat kennisgewings toe om klanke te speel",
