--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -178,6 +178,7 @@
   "SettingGroup_Files_and_Folders": "Soubory a složky",
   "SettingGroup_File_Associations": "Přidružení souborů",
   "SettingGroup_Navigation_Pane": "Navigační podokno",
+  "SettingGroup_Other": "Ostatní",
   "Setting_windows-pushnotifications_Name": "Zobrazovat oznámení",
   "Setting_windows-pushnotifications_Description": "Dostávat oznámení od aplikací a dalších odesílatelů ve Windows",
   "Setting_notifications-sound_Name": "Povolit přehrávání zvuků oznámení",
