--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -178,6 +178,7 @@
   "SettingGroup_Files_and_Folders": "Αρχεία και Φάκελοι",
   "SettingGroup_File_Associations": "Συσχετίσεις Αρχείων",
   "SettingGroup_Navigation_Pane": "Παράθυρο Περιήγησης",
+  "SettingGroup_Other": "Άλλα",
   "Setting_windows-pushnotifications_Name": "Εμφάνιση Ειδοποιήσεων",
   "Setting_windows-pushnotifications_Description": "Λήψη ειδοποιήσεων από εφαρμογές και άλλους αποστολείς στα Windows",
   "Setting_notifications-sound_Name": "Να επιτρέπεται η αναπαραγωγή ήχων στις ειδοποιήσεις",
