--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -178,6 +178,7 @@
   "SettingGroup_Files_and_Folders": "File e cartelle",
   "SettingGroup_File_Associations": "Associazioni di file",
   "SettingGroup_Navigation_Pane": "Riquadro di navigazione",
+  "SettingGroup_Other": "Altro",
   "Setting_windows-pushnotifications_Name": "Mostra notifiche",
   "Setting_windows-pushnotifications_Description": "Ricevi notifiche da app e altri mittenti in Windows",
   "Setting_notifications-sound_Name": "Consenti alle notifiche di riprodurre suoni",
