--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -178,6 +178,7 @@
   "SettingGroup_Files_and_Folders": "Failai ir aplankai",
   "SettingGroup_File_Associations": "Failų asociacijos",
   "SettingGroup_Navigation_Pane": "Naršymo sritis",
+  "SettingGroup_Other": "Kita",
   "Setting_windows-pushnotifications_Name": "Rodyti pranešimus",
   "Setting_windows-pushnotifications_Description": "Gauti pranešimus iš programų ir kitų siuntėjų Windows sistemoje",
   "Setting_notifications-sound_Name": "Leisti pranešimams groti garsus",
