--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -178,6 +178,7 @@
   "SettingGroup_Files_and_Folders": "Faili un mapes",
   "SettingGroup_File_Associations": "Failu asociācijas",
   "SettingGroup_Navigation_Pane": "Navigācijas rūts",
+  "SettingGroup_Other": "Citi",
   "Setting_windows-pushnotifications_Name": "Rādīt paziņojumus",
   "Setting_windows-pushnotifications_Description": "Saņemt paziņojumus no lietotnēm un citiem sūtītājiem sistēmā Windows",
   "Setting_notifications-sound_Name": "Atļaut paziņojumiem atskaņot skaņas",
