--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -178,6 +178,7 @@
   "SettingGroup_Files_and_Folders": "Pliki i foldery",
   "SettingGroup_File_Associations": "Skojarzenia plików",
   "SettingGroup_Navigation_Pane": "Panel nawigacji",
+  "SettingGroup_Other": "Inne",
   "Setting_windows-pushnotifications_Name": "Pokazuj powiadomienia",
   "Setting_windows-pushnotifications_Description": "Otrzymuj powiadomienia z aplikacji i innych nadawców w systemie Windows",
   "Setting_notifications-sound_Name": "Zezwalaj powiadomieniom na odtwarzanie dźwięków",
