--- a/src/Winhance.UI/Features/Common/Localization/pt-BR.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt-BR.json
@@ -178,6 +178,7 @@
   "SettingGroup_Files_and_Folders": "Arquivos e Pastas",
   "SettingGroup_File_Associations": "Associações de Arquivos",
   "SettingGroup_Navigation_Pane": "Painel de Navegação",
+  "SettingGroup_Other": "Outros",
   "Setting_windows-pushnotifications_Name": "Mostrar Notificações",
   "Setting_windows-pushnotifications_Description": "Receba notificações de aplicativos e outros remetentes no Windows",
   "Setting_notifications-sound_Name": "Permitir que notificações reproduzam sons",
