--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -178,6 +178,7 @@
   "SettingGroup_Files_and_Folders": "Tệp và Thư mục",
   "SettingGroup_File_Associations": "Liên kết tệp",
   "SettingGroup_Navigation_Pane": "Ngăn điều hướng",
+  "SettingGroup_Other": "Khác",
   "Setting_windows-pushnotifications_Name": "Hiển thị thông báo",
   "Setting_windows-pushnotifications_Description": "Nhận thông báo từ các ứng dụng và người gửi khác trong Windows",
   "Setting_notifications-sound_Name": "Cho phép thông báo phát âm thanh",
