--- a/src/Winhance.UI/Features/Common/Localization/nl.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl.json
@@ -178,6 +178,7 @@
   "SettingGroup_Files_and_Folders": "Bestanden en Mappen",
   "SettingGroup_File_Associations": "Bestandsassociaties",
   "SettingGroup_Navigation_Pane": "Navigatievenster",
+  "SettingGroup_Other": "Overige",
   "Setting_windows-pushnotifications_Name": "Meldingen weergeven",
   "Setting_windows-pushnotifications_Description": "Ontvang meldingen van apps en andere afzenders in Windows",
   "Setting_notifications-sound_Name": "Geluiden toestaan voor meldingen",
